--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,600;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -81,4 +82,119 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: 400;
+}
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  text-decoration: none;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  height: 75px;
+  width: 290px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.home {
+  background-color: #87509c;
+  padding: 0 170px;
+  min-height: 600px;
+}
+
+.home__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 30px;
+}
+
+.home__header_logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__header_nav {
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.home__header_nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home__header_nav ul li {
+  padding: 0 15px;
+}
+
+.home__header_nav ul li a {
+  padding: 0 15px;
+  text-decoration: none;
+  height: 35px;
+  width: 75px;
+  text-transform: uppercase;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  color: #fff;
+  background-color: #87509c;
+  border-radius: 5px;
+  -webkit-transition: background-color, ease-in-out 0.3s;
+  transition: background-color, ease-in-out 0.3s;
+}
+
+.home__header_nav ul li a:hover {
+  background-color: #673e7c;
+}
+
+.home__text {
+  color: #fff;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 600;
+  font-size: 40px;
+  width: 910px;
+  text-align: center;
+  margin: 140px auto 50px;
+}
+
+.home__btn {
+  top: 0;
+  color: #fff;
+  background-color: #eb7d4b;
+  -webkit-box-shadow: 0 5px 0 #cc6e56;
+          box-shadow: 0 5px 0 #cc6e56;
+  -webkit-transition: all ease-in-out 0.3s;
+  transition: all ease-in-out 0.3s;
+}
+
+.home__btn:hover {
+  top: 2px;
+  -webkit-box-shadow: 0 3px 0 #b95f48;
+          box-shadow: 0 3px 0 #b95f48;
+  background-color: #ff8851;
 }
