--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,101 @@
 @import "zerostyles";
+
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,600;1,700&display=swap');
+
+.wrapper {}
+
+.container {}
+
+
+.btn {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+  text-decoration: none;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  height: 75px;
+  width: 290px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.home {
+  background-color: #87509c;
+  padding: 0 170px;
+  min-height: 600px;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+
+    &_logo {
+      display: flex;
+      align-items: center;
+    }
+
+    &_nav {
+      height: 60px;
+      display: flex;
+
+      & ul {
+        display: flex;
+        align-content: center;
+        align-items: center;
+
+        & li {
+          padding: 0 15px;
+
+          & a {
+            padding: 0 15px;
+            text-decoration: none;
+            height: 35px;
+            width: 75px;
+            text-transform: uppercase;
+            font-family: "Titillium Web", sans-serif;
+            font-size: 16px;
+            color: #fff;
+            background-color: #87509c;
+            border-radius: 5px;
+            transition: background-color, ease-in-out 0.3s;
+
+            &:hover {
+              background-color: #673e7c;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &__text {
+    color: #fff;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+    width: 910px;
+    text-align: center;
+    margin: 140px auto 50px;
+  }
+
+  &__btn {
+
+    top: 0;
+    color: #fff;
+    background-color: #eb7d4b;
+    box-shadow: 0 5px 0 #cc6e56;
+    transition: all ease-in-out 0.3s;
+
+    &:hover {
+      top: 2px;
+      box-shadow: 0 3px 0 #b95f48;
+      background-color: #ff8851;
+    }
+
+  }
+
+}
