Added "Services" section

--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,33 @@ h6 {
   border-radius: 5px;
 }
 
+.section {
+  padding: 0 170px;
+}
+
+.heading {
+  font-size: 30px;
+  font-family: "Titillium Web", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
+  position: relative;
+  padding: 120px 0 30px 0;
+}
+
+.heading::after {
+  content: '';
+  position: absolute;
+  width: 90px;
+  height: 4px;
+  left: 50%;
+  bottom: 0;
+  margin: 0 0 0 -50px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .home {
   background-color: #87509c;
-  padding: 0 170px;
   min-height: 600px;
 }
 
@@ -197,4 +221,63 @@ h6 {
   -webkit-box-shadow: 0 3px 0 #b95f48;
           box-shadow: 0 3px 0 #b95f48;
   background-color: #ff8851;
+}
+
+.services {
+  background-color: #17c2a4;
+  color: #fff;
+}
+
+.services__text {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  text-align: center;
+  margin: 30px auto;
+  max-width: 600px;
+}
+
+.services__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 70px 0 120px 0;
+}
+
+.services__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-family: "Titillium Web", sans-serif;
+  width: 200px;
+}
+
+.services__item_icon {
+  margin: 0 0 60px 0;
+}
+
+.services__item_caption {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0 0 30px 0;
+}
+
+.services__item_text {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 1.25;
 }
