--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,9 +23,33 @@
   border-radius: 5px;
 }
 
+.section {
+  padding: 0 170px;
+}
+
+.heading {
+  font-size: 30px;
+  font-family: "Titillium Web", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
+  position: relative;
+  padding: 120px 0 30px 0;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 90px;
+    height: 4px;
+    left: 50%;
+    bottom: 0;
+    margin: 0 0 0 -50px;
+    background-color: rgba($color: #000000, $alpha: 0.2)
+  }
+}
+
 .home {
   background-color: #87509c;
-  padding: 0 170px;
   min-height: 600px;
 
   &__header {
@@ -98,4 +122,53 @@
 
   }
 
+}
+
+.services {
+
+  background-color: #17c2a4;
+  color: #fff;
+
+  &__heading {}
+
+  &__text {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 16px;
+    text-align: center;
+    margin: 30px auto;
+    max-width: 600px;
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 70px 0 120px 0;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    width: 200px;
+
+    &_icon {
+      margin: 0 0 60px 0;
+    }
+
+    &_caption {
+      text-transform: uppercase;
+      font-size: 20px;
+      font-weight: 600;
+      margin: 0 0 30px 0;
+    }
+
+    &_text {
+      font-size: 16px;
+      font-weight: 100;
+      line-height: 1.25;
+    }
+  }
 }
