--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ h6 {
   left: 50%;
   bottom: 0;
   margin: 0 0 0 -50px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .home {
@@ -359,4 +359,48 @@ h6 {
 
 .team__item_socials a img {
   margin: 0 5px;
+}
+
+.skills {
+  color: #3c4761;
+  font-family: "Titillium Web", sans-serif;
+}
+
+.skills__text {
+  margin: 20px auto;
+  font-size: 16px;
+  max-width: 580px;
+  text-align: center;
+}
+
+.skills__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 30px 0 120px 0;
+}
+
+.skills__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.skills__progress {
+  margin: 0 0 30px 0;
+}
+
+.skills__name {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 600;
 }
