--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,7 +50,7 @@
     left: 50%;
     bottom: 0;
     margin: 0 0 0 -50px;
-    background-color: rgba($color: #000000, $alpha: 0.2)
+    background-color: rgba($color: #000000, $alpha: 0.1)
   }
 }
 
@@ -243,3 +243,45 @@
     }
   }
 }
+
+.skills {
+
+  color: #3c4761;
+  font-family: "Titillium Web", sans-serif;
+
+  &__heading {}
+
+  &__text {
+    margin: 20px auto;
+    font-size: 16px;
+    max-width: 580px;
+    text-align: center;
+
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-around;
+    padding: 30px 0 120px 0;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__progress {
+    margin: 0 0 30px 0;
+  }
+
+  &__name {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
+.section {}
+
+.heading {}
