--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,13 @@ h6 {
   font-weight: 400;
 }
 
+.text {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  text-align: center;
+  margin: 30px auto;
+}
+
 .btn {
   display: -webkit-box;
   display: -ms-flexbox;
