--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,13 @@
 
 .container {}
 
+.text {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  text-align: center;
+  margin: 30px auto;
+}
+
 .btn {
   display: flex;
   justify-content: center;
