--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,7 +40,7 @@
   font-weight: 600;
   text-align: center;
   position: relative;
-  padding: 120px 0 30px 0;
+  padding: 60px 0 30px 0;
 
   &::after {
     content: '';
@@ -56,7 +56,8 @@
 
 .home {
   background-color: #87509c;
-  min-height: 600px;
+  // min-height: 600px;
+  padding: 0 170px 150px;
 
   &__header {
     display: flex;
@@ -119,6 +120,7 @@
     background-color: #eb7d4b;
     box-shadow: 0 5px 0 #cc6e56;
     transition: all ease-in-out 0.3s;
+    // padding: 0 auto 150px;
 
     &:hover {
       top: 2px;
@@ -286,8 +288,9 @@
         @keyframes segment {
           from {
             transform: rotateY(0deg);
-            // stroke-dasharray: 0 100;
           }
+
+          // stroke-dasharray: 0 100;
 
           to {
             transform: rotateY(360deg);
@@ -309,6 +312,84 @@
   }
 }
 
-.section {}
+.portfolio {
 
-.heading {}
+  background-color: #ffdd99;
+  font-family: "Titillium Web", sans-serif;
+  color: #393939;
+  padding: 0 170px 110px;
+
+
+  &__heading {}
+
+  &__text {
+    width: 520px;
+  }
+
+  &__nav {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 60px 0;
+
+    & ul {
+      display: flex;
+      align-content: center;
+      align-items: center;
+
+      & li {
+        padding: 0 5px;
+
+        & a {
+          padding: 0 15px;
+          text-decoration: none;
+          height: 35px;
+          width: 75px;
+          text-transform: uppercase;
+          font-family: "Titillium Web", sans-serif;
+          font-size: 16px;
+          color: #393939;
+          background-color: #ebc985;
+          border-radius: 5px;
+          transition: background-color, ease-in-out 0.3s;
+
+          &:hover {
+            background-color: #fff;
+          }
+        }
+      }
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__item {
+    margin: 0 10px;
+  }
+
+  &__name {
+    text-align: center;
+    margin: 30px 0 60px 0;
+    text-transform: uppercase;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+  }
+
+  &__btn {
+    top: 0;
+    color: #fff;
+    background-color: #17c2a4;
+    box-shadow: 0 5px 0 #14a58c;
+    transition: all ease-in-out 0.3s;
+
+    &:hover {
+      top: 2px;
+      box-shadow: 0 3px 0 #118d78;
+      background-color: #16aa8f;
+    }
+  }
+}
