--- a/css/style.css
+++ b/css/style.css
@@ -664,6 +664,7 @@ h6 {
 .feedback__textarea {
   font-family: "Titillium Web", sans-serif;
   background-color: #273a71;
+  color: #fff;
   border-radius: 5px;
   width: 850px;
   min-height: 60px;
