--- a/scss/style.scss
+++ b/scss/style.scss
@@ -480,6 +480,7 @@
   &__textarea {
     font-family: "Titillium Web", sans-serif;
     background-color: #273a71;
+    color: #fff;
     border-radius: 5px;
     width: 850px;
     min-height: 60px;
