Added burger menu for mobile devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,12 @@
 @import "zerostyles";
 
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,600;1,700&display=swap");
 
-.wrapper {}
+.wrapper {
+}
 
-.container {}
+.container {
+}
 
 .text {
   font-family: "Titillium Web", sans-serif;
@@ -44,42 +46,161 @@
   letter-spacing: 4px;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 90px;
     height: 4px;
     left: 50%;
     bottom: 0;
     margin: 0 0 0 -50px;
-    background-color: rgba($color: #000000, $alpha: 0.1)
+    background-color: rgba($color: #000000, $alpha: 0.1);
   }
+}
+
+@media (max-width: 768px) {
+  body.lock {
+    overflow: hidden;
+  }
+}
+
+body.lock {
 }
 
 .home {
   background-color: #87509c;
   padding: 0 170px 150px;
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #87509c;
+  }
+
+  &__burger {
+    display: none;
+    @media (max-width: 768px) {
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 20px;
+      position: relative;
+      z-index: 5;
+      &::before {
+        content: "";
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        top: 0;
+        transition: all 0.3s ease 0s;
+      }
+
+      & span {
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.3s ease 0s;
+      }
+
+      &::after {
+        content: "";
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        bottom: 0;
+        transition: all 0.3s ease 0s;
+      }
+      &.active::before {
+        transform: rotate(45deg);
+        top: 9px;
+      }
+      &.active::after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+      }
+      &.active span {
+        transform: scale(0);
+      }
+    }
+  }
+
   &__header {
     display: flex;
     justify-content: space-between;
+    background-color: #87509c;
     padding: 30px;
+    position: relative;
+    z-index: 2;
+
+    @media (max-width: 768px) {
+      background-color: #87509c;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 50;
+      padding: 20px 10px;
+    }
 
     &_logo {
       display: flex;
       align-items: center;
+      flex: 0 0 36px;
+      @media (max-width: 768px) {
+        // display: block;
+        position: relative;
+        z-index: 5;
+      }
     }
 
     &_nav {
       height: 60px;
       display: flex;
-
+      @media (max-width: 768px) {
+        display: block;
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        // height: 30%;
+        height: 300px;
+        background-color: #87509c;
+        z-index: 3;
+        transition: all 0.3s ease-in-out 0s;
+      }
+      @media (max-width: 414px) {
+        // height: 50%;
+      }
+      &.active {
+        top: 0;
+      }
       & ul {
         display: flex;
         align-content: center;
         align-items: center;
+        position: relative;
+        z-index: 2;
+        @media (max-width: 768px) {
+          display: block;
+          padding: 100px 0 0 0;
+          text-align: center;
+        }
 
         & li {
           padding: 0 15px;
+          @media (max-width: 768px) {
+            margin: 0 0 20px 0;
+          }
 
           & a {
             padding: 0 15px;
@@ -112,6 +233,7 @@
     width: 910px;
     text-align: center;
     margin: 140px auto 50px;
+    position: relative;
   }
 
   &__btn {
@@ -127,17 +249,16 @@
       background-color: #ff8851;
       cursor: pointer;
     }
-
   }
-
 }
 
 .services {
-
   background-color: #17c2a4;
   color: #fff;
+  position: relative;
 
-  &__heading {}
+  &__heading {
+  }
 
   &__text {
     max-width: 600px;
@@ -178,7 +299,6 @@
 }
 
 .team {
-
   background-color: #e7f1f8;
   color: #3c4761;
 
@@ -197,7 +317,6 @@
   }
 
   &__item {
-
     display: flex;
     flex-direction: column;
     font-family: "Titillium Web", sans-serif;
@@ -247,18 +366,17 @@
 }
 
 .skills {
-
   color: #3c4761;
   font-family: "Titillium Web", sans-serif;
 
-  &__heading {}
+  &__heading {
+  }
 
   &__text {
     margin: 20px auto;
     font-size: 16px;
     max-width: 580px;
     text-align: center;
-
   }
 
   &__items {
@@ -285,14 +403,13 @@
 }
 
 .portfolio {
-
   background-color: #ffdd99;
   font-family: "Titillium Web", sans-serif;
   color: #393939;
   padding: 0 170px 110px;
 
-
-  &__heading {}
+  &__heading {
+  }
 
   &__text {
     width: 520px;
@@ -369,14 +486,15 @@
 }
 
 .reviews {
-
   background-color: #d74680;
   color: #fff;
   font-family: "Titillium Web", sans-serif;
 
-  &__heading {}
+  &__heading {
+  }
 
-  &__text {}
+  &__text {
+  }
 
   &__items {
     display: flex;
@@ -395,7 +513,8 @@
     padding: 0 0 60px 0;
   }
 
-  &__avatar {}
+  &__avatar {
+  }
 
   &__item-review {
     margin: 0 0 0 20px;
@@ -428,18 +547,18 @@
 }
 
 .feedback {
-
   background-color: #3c5499;
   color: #fff;
 
   &__heading {
     &::after {
-      content: '';
+      content: "";
       background-color: rgba($color: #000000, $alpha: 0.3);
     }
   }
 
-  &__text {}
+  &__text {
+  }
 
   &__form {
     max-width: 850px;
@@ -524,7 +643,6 @@
 }
 
 .footer {
-
   min-height: 100px;
   background-color: #344b8e;
   display: flex;
