--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ h6 {
 }
 
 .heading::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 90px;
   height: 4px;
@@ -139,9 +139,86 @@ h6 {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+@media (max-width: 768px) {
+  body.lock {
+    overflow: hidden;
+  }
+}
+
 .home {
   background-color: #87509c;
   padding: 0 170px 150px;
+}
+
+.home::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #87509c;
+}
+
+.home__burger {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .home__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    z-index: 5;
+  }
+  .home__burger::before {
+    content: "";
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .home__burger span {
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .home__burger::after {
+    content: "";
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .home__burger.active::before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 9px;
+  }
+  .home__burger.active::after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 9px;
+  }
+  .home__burger.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
 }
 
 .home__header {
@@ -151,7 +228,22 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background-color: #87509c;
   padding: 30px;
+  position: relative;
+  z-index: 2;
+}
+
+@media (max-width: 768px) {
+  .home__header {
+    background-color: #87509c;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    padding: 20px 10px;
+  }
 }
 
 .home__header_logo {
@@ -161,6 +253,16 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 36px;
+          flex: 0 0 36px;
+}
+
+@media (max-width: 768px) {
+  .home__header_logo {
+    position: relative;
+    z-index: 5;
+  }
 }
 
 .home__header_nav {
@@ -168,6 +270,25 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 768px) {
+  .home__header_nav {
+    display: block;
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background-color: #87509c;
+    z-index: 3;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+}
+
+.home__header_nav.active {
+  top: 0;
 }
 
 .home__header_nav ul {
@@ -179,10 +300,26 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  z-index: 2;
+}
+
+@media (max-width: 768px) {
+  .home__header_nav ul {
+    display: block;
+    padding: 100px 0 0 0;
+    text-align: center;
+  }
 }
 
 .home__header_nav ul li {
   padding: 0 15px;
+}
+
+@media (max-width: 768px) {
+  .home__header_nav ul li {
+    margin: 0 0 20px 0;
+  }
 }
 
 .home__header_nav ul li a {
@@ -213,6 +350,7 @@ h6 {
   width: 910px;
   text-align: center;
   margin: 140px auto 50px;
+  position: relative;
 }
 
 .home__btn {
@@ -236,6 +374,7 @@ h6 {
 .services {
   background-color: #17c2a4;
   color: #fff;
+  position: relative;
 }
 
 .services__text {
@@ -573,7 +712,7 @@ h6 {
 }
 
 .feedback__heading::after {
-  content: '';
+  content: "";
   background-color: rgba(0, 0, 0, 0.3);
 }
 
