--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ h6 {
     left: 0;
     width: 100%;
     height: 300px;
+    overflow: auto;
     background-color: #87509c;
     z-index: 3;
     -webkit-transition: all 0.3s ease-in-out 0s;
