--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,7 +157,6 @@ body.lock {
       align-items: center;
       flex: 0 0 36px;
       @media (max-width: 768px) {
-        // display: block;
         position: relative;
         z-index: 5;
       }
@@ -172,14 +171,11 @@ body.lock {
         top: -100%;
         left: 0;
         width: 100%;
-        // height: 30%;
         height: 300px;
+        overflow: auto;
         background-color: #87509c;
         z-index: 3;
         transition: all 0.3s ease-in-out 0s;
-      }
-      @media (max-width: 414px) {
-        // height: 50%;
       }
       &.active {
         top: 0;
