--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,10 +29,21 @@
   width: 290px;
   position: relative;
   border-radius: 5px;
+  @media (max-width: 375px) {
+    height: 50px;
+    width: 250px;
+    font-size: 16px;
+  }
 }
 
 .section {
   padding: 0 170px;
+  @media (max-width: 1024px) {
+    padding: 0 20px;
+  }
+  @media (max-width: 320px) {
+    padding: 0 10px 50px;
+  }
 }
 
 .heading {
@@ -57,36 +68,40 @@
   }
 }
 
-@media (max-width: 768px) {
-  body.lock {
+body.lock {
+  @media (max-width: 768px) {
     overflow: hidden;
   }
-}
-
-body.lock {
 }
 
 .home {
   background-color: #87509c;
   padding: 0 170px 150px;
-
+  @media (max-width: 1024px) {
+    padding: 0 20px 100px;
+  }
+  @media (max-width: 320px) {
+    padding: 0 10px 50px;
+  }
   &::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
     width: 100%;
     background-color: #87509c;
+    @media (max-width: 830px) {
+      height: 100%;
+    }
   }
 
   &__burger {
     display: none;
-    @media (max-width: 768px) {
+    @media (max-width: 830px) {
       display: block;
-      position: relative;
       width: 30px;
       height: 20px;
+      margin: 8px 0;
       position: relative;
       z-index: 5;
       &::before {
@@ -142,7 +157,7 @@ body.lock {
     position: relative;
     z-index: 2;
 
-    @media (max-width: 768px) {
+    @media (max-width: 830px) {
       background-color: #87509c;
       position: fixed;
       width: 100%;
@@ -156,7 +171,7 @@ body.lock {
       display: flex;
       align-items: center;
       flex: 0 0 36px;
-      @media (max-width: 768px) {
+      @media (max-width: 830px) {
         position: relative;
         z-index: 5;
       }
@@ -165,7 +180,7 @@ body.lock {
     &_nav {
       height: 60px;
       display: flex;
-      @media (max-width: 768px) {
+      @media (max-width: 830px) {
         display: block;
         position: fixed;
         top: -100%;
@@ -186,7 +201,7 @@ body.lock {
         align-items: center;
         position: relative;
         z-index: 2;
-        @media (max-width: 768px) {
+        @media (max-width: 830px) {
           display: block;
           padding: 100px 0 0 0;
           text-align: center;
@@ -194,7 +209,7 @@ body.lock {
 
         & li {
           padding: 0 15px;
-          @media (max-width: 768px) {
+          @media (max-width: 830px) {
             margin: 0 0 20px 0;
           }
 
@@ -226,10 +241,13 @@ body.lock {
     font-family: "Titillium Web", sans-serif;
     font-weight: 600;
     font-size: 40px;
-    width: 910px;
+    max-width: 910px;
     text-align: center;
     margin: 140px auto 50px;
     position: relative;
+    @media (max-width: 768px) {
+      font-size: 24px;
+    }
   }
 
   &__btn {
@@ -264,6 +282,15 @@ body.lock {
     display: flex;
     justify-content: space-evenly;
     padding: 70px 0 120px 0;
+    @media (max-width: 768px) {
+      padding: 20px 0 50px 0;
+      flex-direction: column;
+      align-items: center;
+    }
+    @media (min-width: 768px) and (max-width: 830px) {
+      padding: 20px 100px 50px;
+      flex-wrap: wrap;
+    }
   }
 
   &__item {
@@ -274,6 +301,10 @@ body.lock {
     text-align: center;
     font-family: "Titillium Web", sans-serif;
     width: 200px;
+
+    @media (max-width: 768px) {
+      margin: 20px 0;
+    }
 
     &_icon {
       margin: 0 0 30px 0;
@@ -310,6 +341,15 @@ body.lock {
     display: flex;
     justify-content: space-around;
     padding: 0 0 120px 0;
+    @media (max-width: 768px) {
+      padding: 0px 0 50px 0;
+      flex-direction: column;
+      align-items: center;
+    }
+    @media (min-width: 768px) and (max-width: 830px) {
+      padding: 20px 70px 50px;
+      flex-wrap: wrap;
+    }
   }
 
   &__item {
@@ -322,6 +362,11 @@ body.lock {
     width: 250px;
     padding: 0 0 50px 0;
     position: relative;
+    margin: 10px 0;
+
+    @media (max-width: 768px) {
+      margin: 20px 0;
+    }
 
     &_avatar {
       width: 200px;
@@ -329,6 +374,10 @@ body.lock {
       background-color: #878787;
       border-radius: 50%;
       margin: 0 0 40px 0;
+      @media (max-width: 740px) {
+        width: 100px;
+        height: 100px;
+      }
     }
 
     &_name {
@@ -379,6 +428,15 @@ body.lock {
     display: flex;
     justify-content: space-around;
     padding: 30px 0 120px 0;
+    @media (max-width: 768px) {
+      padding: 0px 0 50px 0;
+      flex-direction: column;
+      align-items: center;
+    }
+    @media (min-width: 768px) and (max-width: 830px) {
+      padding: 20px 100px 50px;
+      flex-wrap: wrap;
+    }
   }
 
   &__item {
@@ -403,12 +461,18 @@ body.lock {
   font-family: "Titillium Web", sans-serif;
   color: #393939;
   padding: 0 170px 110px;
+  @media (max-width: 768px) {
+    padding: 0 20px 50px;
+  }
+  @media (max-width: 320px) {
+    padding: 0 10px 50px;
+  }
 
   &__heading {
   }
 
   &__text {
-    width: 520px;
+    max-width: 520px;
   }
 
   &__nav {
@@ -421,9 +485,11 @@ body.lock {
       display: flex;
       align-content: center;
       align-items: center;
-
       & li {
         padding: 0 5px;
+        @media (max-width: 320px) {
+          padding: 0 2px;
+        }
 
         & a {
           padding: 0 15px;
@@ -437,6 +503,9 @@ body.lock {
           background-color: #ebc985;
           border-radius: 5px;
           transition: background-color, ease-in-out 0.3s;
+          @media (max-width: 320px) {
+            font-size: 14px;
+          }
 
           &:hover {
             background-color: #fff;
@@ -455,6 +524,14 @@ body.lock {
 
   &__item {
     margin: 0 10px;
+    & img {
+      @media (max-width: 768px) {
+        max-width: 300px;
+      }
+      @media (max-width: 320px) {
+        max-width: 250px;
+      }
+    }
   }
 
   &__name {
@@ -507,9 +584,29 @@ body.lock {
     align-items: center;
     position: relative;
     padding: 0 0 60px 0;
+    @media (max-width: 768px) {
+      padding: 0 0 100px 0;
+      margin: 0 50px 140px;
+      flex-direction: column;
+    }
+    @media (max-width: 375px) {
+      padding: 0 0 80px 0;
+      margin: 0 50px 50px;
+    }
   }
 
   &__avatar {
+    @media (max-width: 375px) {
+      width: 60px;
+    }
+    @media (max-width: 768px) {
+      margin: 0 0 20px 0;
+    }
+    & img {
+      @media (max-width: 375px) {
+        width: 60px;
+      }
+    }
   }
 
   &__item-review {
@@ -521,6 +618,9 @@ body.lock {
     font-style: italic;
     font-size: 20px;
     font-weight: 200;
+    @media (max-width: 375px) {
+      font-size: 16px;
+    }
   }
 
   &__person {
@@ -534,11 +634,17 @@ body.lock {
     text-transform: uppercase;
     margin: 0 0 10px 0;
     font-size: 20px;
+    @media (max-width: 375px) {
+      font-size: 16px;
+    }
   }
 
   &__position {
     color: #ffdd99;
     font-size: 20px;
+    @media (max-width: 375px) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -567,16 +673,23 @@ body.lock {
   &__form-inputs {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 830px) {
+      flex-direction: column;
+    }
   }
 
   &__input {
     font-family: "Titillium Web", sans-serif;
     background-color: #273a71;
-    width: 400px;
+    width: 420px;
     height: 60px;
     border-radius: 5px;
     padding: 20px;
     color: #fff;
+    @media (max-width: 830px) {
+      width: 100%;
+      margin: 5px 0;
+    }
 
     &::placeholder {
       color: #fff;
@@ -588,6 +701,9 @@ body.lock {
       &::placeholder {
         text-indent: 500px;
         transition: text-ident, 0.3s ease;
+        @media (max-width: 830px) {
+          text-indent: 850px;
+        }
       }
     }
   }
@@ -597,12 +713,16 @@ body.lock {
     background-color: #273a71;
     color: #fff;
     border-radius: 5px;
-    width: 850px;
+    max-width: 850px;
     min-height: 60px;
     height: 200px;
-    margin: 30px auto 60px;
+    margin: 10px 0 60px;
     padding: 20px;
     resize: vertical;
+    @media (max-width: 768px) {
+      max-width: 850px;
+      margin: 5px 0 60px;
+    }
 
     &::-webkit-resizer {
       display: none;
@@ -645,6 +765,9 @@ body.lock {
   align-content: center;
   justify-content: center;
   align-items: center;
+  @media (max-width: 740px) {
+    flex-direction: column;
+  }
 
   &__link {
     text-decoration: none;
@@ -654,6 +777,9 @@ body.lock {
     font-size: 20px;
     margin: 25px;
     transition: color, 0.3s ease;
+    @media (max-width: 740px) {
+      font-size: 16px;
+    }
 
     &:hover {
       color: #30bae7;
