--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ h6 {
   padding: 0 170px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1440px) {
   .section {
     padding: 0 20px;
   }
@@ -318,7 +318,9 @@ h6 {
     width: 100%;
     height: 300px;
     overflow: auto;
-    background-color: #87509c;
+    background-color: rgba(135, 80, 156, 0.5);
+    -webkit-backdrop-filter: blur(8px);
+            backdrop-filter: blur(8px);
     z-index: 3;
     -webkit-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
@@ -373,6 +375,12 @@ h6 {
   border-radius: 5px;
   -webkit-transition: background-color, ease-in-out 0.3s;
   transition: background-color, ease-in-out 0.3s;
+}
+
+@media (max-width: 830px) {
+  .home__header_nav ul li a {
+    background-color: rgba(135, 80, 156, 0);
+  }
 }
 
 .home__header_nav ul li a:hover {
@@ -955,7 +963,7 @@ h6 {
           justify-content: space-between;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 890px) {
   .feedback__form-inputs {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -974,7 +982,7 @@ h6 {
   color: #fff;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 890px) {
   .feedback__input {
     width: 100%;
     margin: 5px 0;
@@ -1033,7 +1041,7 @@ h6 {
   transition: text-ident, 0.3s ease;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 890px) {
   .feedback__input:focus::-webkit-input-placeholder {
     text-indent: 850px;
   }
@@ -1061,7 +1069,7 @@ h6 {
   resize: vertical;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 890px) {
   .feedback__textarea {
     max-width: 850px;
     margin: 5px 0 60px;
