--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,7 +38,7 @@
 
 .section {
   padding: 0 170px;
-  @media (max-width: 1024px) {
+  @media (max-width: 1440px) {
     padding: 0 20px;
   }
   @media (max-width: 320px) {
@@ -188,7 +188,8 @@ body.lock {
         width: 100%;
         height: 300px;
         overflow: auto;
-        background-color: #87509c;
+        background-color: rgba($color: #87509c, $alpha: 0.5);
+        backdrop-filter: blur(8px);
         z-index: 3;
         transition: all 0.3s ease-in-out 0s;
       }
@@ -225,6 +226,10 @@ body.lock {
             background-color: #87509c;
             border-radius: 5px;
             transition: background-color, ease-in-out 0.3s;
+            @media (max-width: 830px) {
+              background-color: rgba($color: #87509c, $alpha: 0);
+              // backdrop-filter: blur(6px);
+            }
 
             &:hover {
               background-color: #673e7c;
@@ -673,7 +678,7 @@ body.lock {
   &__form-inputs {
     display: flex;
     justify-content: space-between;
-    @media (max-width: 830px) {
+    @media (max-width: 890px) {
       flex-direction: column;
     }
   }
@@ -686,7 +691,7 @@ body.lock {
     border-radius: 5px;
     padding: 20px;
     color: #fff;
-    @media (max-width: 830px) {
+    @media (max-width: 890px) {
       width: 100%;
       margin: 5px 0;
     }
@@ -701,7 +706,7 @@ body.lock {
       &::placeholder {
         text-indent: 500px;
         transition: text-ident, 0.3s ease;
-        @media (max-width: 830px) {
+        @media (max-width: 890px) {
           text-indent: 850px;
         }
       }
@@ -719,7 +724,7 @@ body.lock {
     margin: 10px 0 60px;
     padding: 20px;
     resize: vertical;
-    @media (max-width: 768px) {
+    @media (max-width: 890px) {
       max-width: 850px;
       margin: 5px 0 60px;
     }
