--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,8 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 1130px;
+  margin: 0 auto;
 }
 
 .portfolio__item {
@@ -833,6 +835,8 @@ h6 {
           justify-content: center;
   padding: 0 0 30px 0;
   margin: 70px 0 0 0;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .reviews__item {
