--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,11 +2,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,600;1,700&display=swap");
 
-.wrapper {
-}
+.wrapper {}
 
-.container {
-}
+.container {}
 
 .text {
   font-family: "Titillium Web", sans-serif;
@@ -29,6 +27,7 @@
   width: 290px;
   position: relative;
   border-radius: 5px;
+
   @media (max-width: 375px) {
     height: 50px;
     width: 250px;
@@ -38,9 +37,11 @@
 
 .section {
   padding: 0 170px;
+
   @media (max-width: 1440px) {
     padding: 0 20px;
   }
+
   @media (max-width: 320px) {
     padding: 0 10px 50px;
   }
@@ -77,12 +78,15 @@ body.lock {
 .home {
   background-color: #87509c;
   padding: 0 170px 150px;
+
   @media (max-width: 1024px) {
     padding: 0 20px 100px;
   }
+
   @media (max-width: 320px) {
     padding: 0 10px 50px;
   }
+
   &::before {
     content: "";
     position: absolute;
@@ -90,6 +94,7 @@ body.lock {
     left: 0;
     width: 100%;
     background-color: #87509c;
+
     @media (max-width: 830px) {
       height: 100%;
     }
@@ -97,6 +102,7 @@ body.lock {
 
   &__burger {
     display: none;
+
     @media (max-width: 830px) {
       display: block;
       width: 30px;
@@ -104,6 +110,7 @@ body.lock {
       margin: 8px 0;
       position: relative;
       z-index: 5;
+
       &::before {
         content: "";
         background-color: #fff;
@@ -135,14 +142,17 @@ body.lock {
         bottom: 0;
         transition: all 0.3s ease 0s;
       }
+
       &.active::before {
         transform: rotate(45deg);
         top: 9px;
       }
+
       &.active::after {
         transform: rotate(-45deg);
         bottom: 9px;
       }
+
       &.active span {
         transform: scale(0);
       }
@@ -171,6 +181,7 @@ body.lock {
       display: flex;
       align-items: center;
       flex: 0 0 36px;
+
       @media (max-width: 830px) {
         position: relative;
         z-index: 5;
@@ -180,6 +191,7 @@ body.lock {
     &_nav {
       height: 60px;
       display: flex;
+
       @media (max-width: 830px) {
         display: block;
         position: fixed;
@@ -193,15 +205,18 @@ body.lock {
         z-index: 3;
         transition: all 0.3s ease-in-out 0s;
       }
+
       &.active {
         top: 0;
       }
+
       & ul {
         display: flex;
         align-content: center;
         align-items: center;
         position: relative;
         z-index: 2;
+
         @media (max-width: 830px) {
           display: block;
           padding: 100px 0 0 0;
@@ -210,6 +225,7 @@ body.lock {
 
         & li {
           padding: 0 15px;
+
           @media (max-width: 830px) {
             margin: 0 0 20px 0;
           }
@@ -226,6 +242,7 @@ body.lock {
             background-color: #87509c;
             border-radius: 5px;
             transition: background-color, ease-in-out 0.3s;
+
             @media (max-width: 830px) {
               background-color: rgba($color: #87509c, $alpha: 0);
               // backdrop-filter: blur(6px);
@@ -250,6 +267,7 @@ body.lock {
     text-align: center;
     margin: 140px auto 50px;
     position: relative;
+
     @media (max-width: 768px) {
       font-size: 24px;
     }
@@ -276,8 +294,7 @@ body.lock {
   color: #fff;
   position: relative;
 
-  &__heading {
-  }
+  &__heading {}
 
   &__text {
     max-width: 600px;
@@ -287,11 +304,13 @@ body.lock {
     display: flex;
     justify-content: space-evenly;
     padding: 70px 0 120px 0;
+
     @media (max-width: 768px) {
       padding: 20px 0 50px 0;
       flex-direction: column;
       align-items: center;
     }
+
     @media (min-width: 768px) and (max-width: 830px) {
       padding: 20px 100px 50px;
       flex-wrap: wrap;
@@ -346,11 +365,13 @@ body.lock {
     display: flex;
     justify-content: space-around;
     padding: 0 0 120px 0;
+
     @media (max-width: 768px) {
       padding: 0px 0 50px 0;
       flex-direction: column;
       align-items: center;
     }
+
     @media (min-width: 768px) and (max-width: 830px) {
       padding: 20px 70px 50px;
       flex-wrap: wrap;
@@ -379,6 +400,7 @@ body.lock {
       background-color: #878787;
       border-radius: 50%;
       margin: 0 0 40px 0;
+
       @media (max-width: 740px) {
         width: 100px;
         height: 100px;
@@ -419,8 +441,7 @@ body.lock {
   color: #3c4761;
   font-family: "Titillium Web", sans-serif;
 
-  &__heading {
-  }
+  &__heading {}
 
   &__text {
     margin: 20px auto;
@@ -433,11 +454,13 @@ body.lock {
     display: flex;
     justify-content: space-around;
     padding: 30px 0 120px 0;
+
     @media (max-width: 768px) {
       padding: 0px 0 50px 0;
       flex-direction: column;
       align-items: center;
     }
+
     @media (min-width: 768px) and (max-width: 830px) {
       padding: 20px 100px 50px;
       flex-wrap: wrap;
@@ -466,15 +489,16 @@ body.lock {
   font-family: "Titillium Web", sans-serif;
   color: #393939;
   padding: 0 170px 110px;
+
   @media (max-width: 768px) {
     padding: 0 20px 50px;
   }
+
   @media (max-width: 320px) {
     padding: 0 10px 50px;
   }
 
-  &__heading {
-  }
+  &__heading {}
 
   &__text {
     max-width: 520px;
@@ -490,8 +514,10 @@ body.lock {
       display: flex;
       align-content: center;
       align-items: center;
+
       & li {
         padding: 0 5px;
+
         @media (max-width: 320px) {
           padding: 0 2px;
         }
@@ -508,6 +534,7 @@ body.lock {
           background-color: #ebc985;
           border-radius: 5px;
           transition: background-color, ease-in-out 0.3s;
+
           @media (max-width: 320px) {
             font-size: 14px;
           }
@@ -525,14 +552,18 @@ body.lock {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 1130px;
+    margin: 0 auto;
   }
 
   &__item {
     margin: 0 10px;
+
     & img {
       @media (max-width: 768px) {
         max-width: 300px;
       }
+
       @media (max-width: 320px) {
         max-width: 250px;
       }
@@ -568,11 +599,9 @@ body.lock {
   color: #fff;
   font-family: "Titillium Web", sans-serif;
 
-  &__heading {
-  }
+  &__heading {}
 
-  &__text {
-  }
+  &__text {}
 
   &__items {
     display: flex;
@@ -580,6 +609,8 @@ body.lock {
     justify-content: center;
     padding: 0 0 30px 0;
     margin: 70px 0 0 0;
+    max-width: 1100px;
+    margin: 0 auto;
   }
 
   &__item {
@@ -589,11 +620,13 @@ body.lock {
     align-items: center;
     position: relative;
     padding: 0 0 60px 0;
+
     @media (max-width: 768px) {
       padding: 0 0 100px 0;
       margin: 0 50px 140px;
       flex-direction: column;
     }
+
     @media (max-width: 375px) {
       padding: 0 0 80px 0;
       margin: 0 50px 50px;
@@ -604,9 +637,11 @@ body.lock {
     @media (max-width: 375px) {
       width: 60px;
     }
+
     @media (max-width: 768px) {
       margin: 0 0 20px 0;
     }
+
     & img {
       @media (max-width: 375px) {
         width: 60px;
@@ -623,6 +658,7 @@ body.lock {
     font-style: italic;
     font-size: 20px;
     font-weight: 200;
+
     @media (max-width: 375px) {
       font-size: 16px;
     }
@@ -639,6 +675,7 @@ body.lock {
     text-transform: uppercase;
     margin: 0 0 10px 0;
     font-size: 20px;
+
     @media (max-width: 375px) {
       font-size: 16px;
     }
@@ -647,6 +684,7 @@ body.lock {
   &__position {
     color: #ffdd99;
     font-size: 20px;
+
     @media (max-width: 375px) {
       font-size: 16px;
     }
@@ -664,8 +702,7 @@ body.lock {
     }
   }
 
-  &__text {
-  }
+  &__text {}
 
   &__form {
     max-width: 850px;
@@ -678,6 +715,7 @@ body.lock {
   &__form-inputs {
     display: flex;
     justify-content: space-between;
+
     @media (max-width: 890px) {
       flex-direction: column;
     }
@@ -691,6 +729,7 @@ body.lock {
     border-radius: 5px;
     padding: 20px;
     color: #fff;
+
     @media (max-width: 890px) {
       width: 100%;
       margin: 5px 0;
@@ -706,6 +745,7 @@ body.lock {
       &::placeholder {
         text-indent: 500px;
         transition: text-ident, 0.3s ease;
+
         @media (max-width: 890px) {
           text-indent: 850px;
         }
@@ -724,6 +764,7 @@ body.lock {
     margin: 10px 0 60px;
     padding: 20px;
     resize: vertical;
+
     @media (max-width: 890px) {
       max-width: 850px;
       margin: 5px 0 60px;
@@ -770,6 +811,7 @@ body.lock {
   align-content: center;
   justify-content: center;
   align-items: center;
+
   @media (max-width: 740px) {
     flex-direction: column;
   }
@@ -782,6 +824,7 @@ body.lock {
     font-size: 20px;
     margin: 25px;
     transition: color, 0.3s ease;
+
     @media (max-width: 740px) {
       font-size: 16px;
     }
